--- a/app/src/main/res/layout/activity_hareza.xml
+++ b/app/src/main/res/layout/activity_hareza.xml
@@ -10,164 +10,164 @@
     android:paddingHorizontal="30dp"
     android:paddingVertical="20dp">
 
-<!--    <RelativeLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-<!--        <Button-->
-<!--            android:id="@+id/back"-->
-<!--            android:layout_width="40dp"-->
-<!--            android:layout_height="40dp"-->
-<!--            android:background="@drawable/ic_baseline_arrow_back_ios_24" />-->
+        <Button
+            android:id="@+id/back"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_baseline_arrow_back_ios_24" />
 
-<!--    </RelativeLayout>-->
-<!--    <RelativeLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical">-->
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-<!--        <ImageView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="570dp"-->
-<!--            android:layout_marginTop="76dp"-->
-<!--            android:background="@drawable/bg" />-->
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="570dp"
+            android:layout_marginTop="76dp"
+            android:background="@drawable/bg" />
 
-<!--        <ImageView-->
-<!--            android:id="@+id/img"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="150dp"-->
-<!--            android:src="@drawable/profilee" />-->
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:src="@drawable/profilee" />
 
-<!--        <TextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@+id/img"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:fontFamily="@font/poppins_bold"-->
-<!--            android:text="Hareza Yoan Kristianto"-->
-<!--            android:textAlignment="center"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:textSize="25dp"-->
-<!--            android:textStyle="bold" />-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Hareza Yoan Kristianto"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="200dp"-->
-<!--            android:orientation="vertical"-->
-<!--            android:padding="20dp">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="200dp"
+            android:orientation="vertical"
+            android:padding="20dp">
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:text="Alamat Email"-->
-<!--                android:textSize="13dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:text="Alamat Email"
+                android:textSize="13dp"
+                android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_marginBottom="10dp"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:text="harezayoan@gmail.com"-->
-<!--                android:textSize="16dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:text="harezayoan@gmail.com"
+                android:textSize="16dp"
+                android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:text="Prodi"-->
-<!--                android:textSize="13dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/black"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Prodi"
+                android:textSize="13dp"
+                android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_marginBottom="10dp"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:text="D3 Tenik Informatika"-->
-<!--                android:textSize="16dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:text="D3 Tenik Informatika"
+                android:textSize="16dp"
+                android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:text="Alamat"-->
-<!--                android:textSize="14dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:text="Alamat"
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_marginBottom="10dp"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:text="Karanganyar, Jawa tengah, Indonesia"-->
-<!--                android:textSize="18dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:text="Karanganyar, Jawa tengah, Indonesia"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:text="Tempat Lahir"-->
-<!--                android:textSize="14dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:text="Tempat Lahir"
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_marginBottom="10dp"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:text="Banaran, Matesih"-->
-<!--                android:textSize="18dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:text="Banaran, Matesih"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:text="Tanggal Lahir"-->
-<!--                android:textSize="14dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:text="Tanggal Lahir"
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_marginBottom="10dp"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:text="2 Juni 2002"-->
-<!--                android:textSize="18dp"-->
-<!--                android:textStyle="bold" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:text="2 Juni 2002"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
-<!--            <RelativeLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal">-->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
 
-<!--            </RelativeLayout>-->
+            </RelativeLayout>
 
-<!--            <ImageView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="550dp"-->
-<!--                android:layout_marginTop="76dp"-->
-<!--                android:background="@drawable/bg" />-->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="550dp"
+                android:layout_marginTop="76dp"
+                android:background="@drawable/bg" />
 
-<!--        </LinearLayout>-->
-<!--    </RelativeLayout>-->
+        </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
