add back button

--- a/app/src/main/res/layout/activity_dewa.xml
+++ b/app/src/main/res/layout/activity_dewa.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/back"
+                android:id="@+id/btnback"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/ic_baseline_arrow_back_ios_24" />
