--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -34,14 +33,20 @@
             android:layout_marginTop="100dp"
             android:orientation="vertical"
             android:padding="20dp">
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:src="@drawable/logouns" />
 
             <TextView
                 android:layout_below="@+id/img"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Kenal Anggota Kelompok"
+                android:text="Kenal Anggota Kelompok 4"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="30dp"
