update foto dinar

--- a/app/src/main/res/layout/activity_dinar.xml
+++ b/app/src/main/res/layout/activity_dinar.xml
@@ -30,13 +30,13 @@
             android:layout_width="match_parent"
             android:layout_height="570dp"
             android:layout_marginTop="76dp"
-            android:background="@drawable/bg" />
+            android:background="@drawable/bg3" />
 
         <ImageView
             android:id="@+id/img"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:src="@drawable/profilee" />
+            android:src="@drawable/foto" />
 
         <TextView
             android:layout_width="match_parent"
