--- a/app/src/main/res/layout/activity_ropiq.xml
+++ b/app/src/main/res/layout/activity_ropiq.xml
@@ -7,18 +7,12 @@
     tools:context=".RopiqActivity"
     android:orientation="vertical"
     android:background="#f5f5f5"
-    android:paddingHorizontal="30dp"
-    android:paddingVertical="20dp">
+    android:paddingHorizontal="0dp"
+    android:paddingVertical="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/back"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/ic_baseline_arrow_back_ios_24" />
 
     </RelativeLayout>
     <RelativeLayout
@@ -26,11 +20,19 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/back"
+            android:layout_marginTop="42dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_baseline_arrow_back_ios_24" />
+
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="600dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/abggtg" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="0dp"
+            android:background="@drawable/abggtggga" />
 
 <!--        <ImageView-->
 <!--            android:id="@+id/img"-->
